--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,19 @@
 <body>
     <div class="guitar">
         <div id="neck">
-            <canvas class="string" id="string1"></canvas>
-            <canvas class="string" id="string2"></canvas>
-            <canvas class="string" id="string3"></canvas>
-            <canvas class="string" id="string4"></canvas>
+            <canvas data-chord="Am" class="string" id="string1"></canvas>
+            <canvas data-chord="A" class="string" id="string2"></canvas>
+            <canvas data-chord="D" class="string" id="string3"></canvas>
+            <canvas data-chord="G" class="string" id="string4"></canvas>
+            <canvas data-chord="B" class="string" id="string5"></canvas>
+            <canvas data-chord="E" class="string" id="string6"></canvas>
         </div>
+        <audio src="" data-chord="Am"></audio>
+        <audio src="" data-chord="A"></audio>
+        <audio src="" data-chord="D"></audio>
+        <audio src="" data-chord="G"></audio>
+        <audio src="" data-chord="B"></audio>
+        <audio src="" data-chord="E"></audio>
     </div>
     <script src="index.js"></script>
 </body>
