big filler done

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,20 @@
 </head>
 <body>
     <div class="guitar">
+        <div class="controls">
+            <div class="backdrop">
+                <img src="./media/background.jpg" alt="background1">
+                <img src="./media/background2.jpg" alt="background2">
+                <img src="./media/background3.jpg" alt="background3">
+            </div>
+            <div class="picks">
+                <img src="./media/pick1.png" alt="pick1">
+                <img src="./media/pick2.png" alt="pick2">
+                <img src="./media/pick3.png" alt="pick3">
+                <img src="./media/pick4.png" alt="pick4">
+                <img src="./media/pick5.png" alt="pick5">
+            </div>
+        </div>
         <div id="neck">
             <canvas data-chord="Em" class="string" id="string1"></canvas>
             <canvas data-chord="A" class="string" id="string2"></canvas>
